# lib/db/src/schema/index.ts
@@ -2,3 +2,4 @@ export * from "./estimates";
 export * from "./ratesConfig";
 export * from "./pathwayEstimates";
 export * from "./hardwareItems";
+export * from "./materials";
